Version 2.2.4

 User-visible changes:
  * Add:
    # --stream-pass option (port from cclive)
    # clipfish support
      * Thanks to Patrick Hoffmann <patrick@sobran.de> for data mining
  * Fix:
    # Misc. typos in manual
    # Redtube support (videoid/title parsing issues)
    # Dailymotion: spak-mini -> spark-mini

 Developer-visible changes:
  * Add:
    # Host/Clipfish.pm
    # t/clipfish.t
    # tlinks/clipfish.url
  * Change:
    # t/02youtube.t: test link (dead link)
    # tlinks/ytube.url: ditto
    # tlinks/multi.url: youtube: ditto


Version 2.2.3
(July 25, 2009)

 User-visible changes:
  * Add:
    1. Support spiegel.de (closes issue #32) [thanks to anon for data]
    2. Support golem.de (closes issue #33) [thanks to anon for data]
    3. ~/.clive/config path support
    4. --cookie-jar option
    5. Support for ehrensenf.de (closes issue #34) [thanks to bjoern for data]
  * Improve: unicode support (related to issue #29)
    1. cctv: no longer requires -C and -R options (obsoletes -R)
    2. --cclass: now works as expected with unicode as well
  * Improve: backwards compatibility with clive 2.0, 2.1
    1. Allow --format=(mp4|hd|hq|3gp) (closes Debian bug #535957)
    2. Restore ~/.config/clive/config path support (closes Debian bug #535483)
    3. Add --upgrade-config (2.0/2.1 config to 2.2+ format)
  * Change:
    1.  --hosts prints now supported formats
    2. Pair --exec with --exec-run, the latter now triggers the former
       2.1. Closes Debian bug #520520
    3. Relocate files
      3.1. ~/.clivelast -> ~/.cache/clive/last
      3.2. ~/.clivecache -> ~/.cache/clive/cache
    4. If HOME environment variable undefined, assume current workdir
    5. --version: print locale etc.
  * Fix:
    1. --version: copyright years
    2. File suffix for CCTV (.x-shockwave-flash -> .flv)
    3. Remove "see examples" from pod markup (closes issue #30)
    4. Prevent ".$suffix" output filenames