@@ -3,6 +3,8 @@ Version 2.2.4
  User-visible changes:
   * Add:
     # --stream-pass option (port from cclive)
+    # funnyhub support
+      * Port from cclive
     # clipfish support
       * Thanks to Patrick Hoffmann <patrick@sobran.de> for data mining
   * Fix:
@@ -13,8 +15,11 @@ Version 2.2.4
  Developer-visible changes:
   * Add:
     # Host/Clipfish.pm
-    # t/clipfish.t
+    # Host/Funnyhub.pm
+    # t/16clipfish.t
+    # t/17funnyhub.t
     # tlinks/clipfish.url
+    # tlinks/funnyhub.url
   * Change:
     # t/02youtube.t: test link (dead link)
     # tlinks/ytube.url: ditto
